<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">


        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="match_parent"
            android:layout_height="113dp"
            android:layout_marginTop="70dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userNameET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_below="@+id/signUpTV"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/def_side_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/def_side_margin"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/userEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameET"
            android:layout_marginLeft="@dimen/def_side_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/def_side_margin"
            android:ems="10"
            android:hint="@string/e_mail_address"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_below="@+id/userEmailET"
            android:layout_marginLeft="@dimen/def_side_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/def_side_margin"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/passwordAgainET"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_below="@+id/passwordET"
            android:layout_marginLeft="@dimen/def_side_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginRight="@dimen/def_side_margin"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordAgainET"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:onClick="signUp"
                android:padding="13dp"
                android:text="@string/sign_up" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="25dp"
                android:onClick="cancel"
                android:padding="13dp"
                android:text="@string/cancel" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>


